[package]
name = "bluepill"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
nb = "0.1.2"
cortex-m-rt = "0.6.8"
embedded-dma = "0.1.2"
bxcan = "0.4.0"
panic-halt = "0.2.0"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5"
alloc-cortex-m = "0.4"
anyhow = { version = "1.0", default-features = false }
bit_field = "0.10.1"
fixedvec = "*"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde-json-core = "0.2.0"
hex = { version = "0.4", default-features = false, features=["alloc"]}
num = { version = "0.4", default-features = false }
byteorder = { version = "1", default-features = false }
cipher = "0.3"
des = "0.7.0"
rsa = { version = "0.4.0", default-features = false, features=["alloc"]}
rand = { version = "0.8.3", default-features = false, features=["alloc"]}
heapless = "0.7.1"

[dependencies.stm32f1xx-hal]
version = "0.7"
features = ["rt", "stm32f103", "medium"]

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.stm32-usbd]
version = "0.5.0"
features = ["ram_access_1x16"]
optional = true

[dev-dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.5.2"
panic-itm = "0.4.1"
cortex-m-rtic = "0.5"

heapless = "0.7"
m = "0.1.1"
mfrc522 = "0.2.0"
serde_derive = "1.0.90"
usb-device = "0.2.3"
usbd-serial = "0.1.0"


[dev-dependencies.byteorder]
default-features = false
version = "1.3.1"

[dev-dependencies.cobs]
default-features = false
version = "0.1.4"

[dev-dependencies.crc16]
default-features = false
version = "0.4.0"

[dev-dependencies.either]
default-features = false
version = "1.5.2"

[dev-dependencies.serde]
default-features = false
version = "1.0.90"


[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true
