[package]
edition = "2018"
name = "bluepill"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloc-cortex-m = "0.4"
anyhow = {version = "1.0", default-features = false}
bit_field = "0.10.1"
bxcan = "0.4.0"
byteorder = {version = "1", default-features = false}
cipher = "0.3"
cortex-m = "0.7.3"
cortex-m-rt = "0.6.14"
des = "0.7.0"
embedded-dma = "0.1.2"
embedded-graphics = "0.7.1"
epd-waveshare = {path = "../../epd-waveshare"}#{git = "https://github.com/caemor/epd-waveshare"}
heapless = "0.7.3"
hex = {version = "0.4", default-features = false, features = ["alloc"]}
nb = "0.1.2"
num = {version = "0.4", default-features = false}
panic-halt = "0.2.0"
rand = {version = "0.8.3", default-features = false, features = ["alloc"]}
rsa = {version = "0.4.0", default-features = false, features = ["alloc"]}
serde = {version = "1.0", default-features = false, features = ["derive", "alloc"]}
serde-json-core = "0.2.0"
ssd1306 = "0.6.0"
tinybmp = "0.3.1"

[dependencies.stm32f1xx-hal]
features = ["rt", "stm32f103", "medium"]
version = "0.7"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[dependencies.stm32-usbd]
features = ["ram_access_1x16"]
optional = true
version = "0.5.0"

[dev-dependencies]
cortex-m-rtic = "0.5"
panic-halt = "0.2.0"
panic-itm = "0.4.1"
panic-semihosting = "0.5.2"

heapless = "0.7"
m = "0.1.1"
mfrc522 = "0.2.0"
serde_derive = "1.0.90"
usb-device = "0.2.3"
usbd-serial = "0.1.0"

[dev-dependencies.byteorder]
default-features = false
version = "1.3.1"

[dev-dependencies.cobs]
default-features = false
version = "0.1.4"

[dev-dependencies.crc16]
default-features = false
version = "0.4.0"

[dev-dependencies.either]
default-features = false
version = "1.5.2"

[dev-dependencies.serde]
default-features = false
version = "1.0.90"

[profile.dev]
codegen-units = 1
debug = true
incremental = false
lto = true
opt-level = "z"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
